imx8mm topeet change phy reset pin

--- a/arch/arm64/boot/dts/freescale/imx8mm-topeet.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mm-topeet.dts
@@ -71,7 +71,7 @@
 	wakeup-source;
 	mmc-pwrseq = <&usdhc1_pwrseq>;
 	fsl,sdio-async-interrupt-enabled;
-	status = "okay";
+	status = "disabled";
 
 	wifi_wake_host {
 		compatible = "nxp,wifi-wake-host";
