--- a/arch/arm/boot/dts/imx6ul-14x14-topeet.dtsi
+++ b/arch/arm/boot/dts/imx6ul-14x14-topeet.dtsi
@@ -259,20 +259,9 @@
 	pinctrl-0 = <&pinctrl_i2c1>;
 	status = "okay";
 
-	magnetometer@e {
-		compatible = "fsl,mag3110";
-		reg = <0x0e>;
-		vdd-supply = <&reg_peri_3v3>;
-		vddio-supply = <&reg_peri_3v3>;
-		position = <2>;
-	};
-
-	fxls8471@1e {
-		compatible = "fsl,fxls8471";
+	ap3216c@1e {
+		compatible = "lsc,ap3216c";
 		reg = <0x1e>;
-		position = <0>;
-		interrupt-parent = <&gpio5>;
-		interrupts = <0 8>;
 	};
 };
 
@@ -379,7 +368,7 @@
 	xnur-gpio = <&gpio1 3 GPIO_ACTIVE_LOW>;
 	measure-delay-time = <0xffff>;
 	pre-charge-time = <0xfff>;
-	status = "okay";
+	status = "disabled";
 };
 
 &uart1 {
