--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -238,4 +238,6 @@ source "drivers/counter/Kconfig"
 source "drivers/most/Kconfig"
 
 source "drivers/mxc/Kconfig"
+
+source "drivers/Sonboy/Kconfig"
 endmenu
