--- a/arch/arm/boot/dts/imx6ul-14x14-topeet.dtsi
+++ b/arch/arm/boot/dts/imx6ul-14x14-topeet.dtsi
@@ -38,44 +38,22 @@
 		status = "okay";
 	};
 
-	reg_sd1_vmmc: regulator-sd1-vmmc {
+	vsys: regulator-vsys {
 		compatible = "regulator-fixed";
-		regulator-name = "VSD_3V3";
-		regulator-min-microvolt = <3300000>;
-		regulator-max-microvolt = <3300000>;
-		gpio = <&gpio1 9 GPIO_ACTIVE_HIGH>;
-		off-on-delay-us = <20000>;
-		enable-active-high;
-	};
-
-	reg_peri_3v3: regulator-peri-3v3 {
-		compatible = "regulator-fixed";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_peri_3v3>;
-		regulator-name = "VPERI_3V3";
-		regulator-min-microvolt = <3300000>;
-		regulator-max-microvolt = <3300000>;
-		gpio = <&gpio5 2 GPIO_ACTIVE_LOW>;
-		/*
-		 * If you want to want to make this dynamic please
-		 * check schematics and test all affected peripherals:
-		 *
-		 * - sensors
-		 * - ethernet phy
-		 * - can
-		 * - bluetooth
-		 * - wm8960 audio codec
-		 * - ov5640 camera
-		 */
+		regulator-name = "VSYS";
+		regulator-min-microvolt = <5000000>;
+		regulator-max-microvolt = <5000000>;
+		regulator-off-in-suspend;
 		regulator-always-on;
 	};
 
-	reg_can_3v3: regulator-can-3v3 {
+	dcdc_3v3: regulator-dcdc-3v3 {
 		compatible = "regulator-fixed";
-		regulator-name = "can-3v3";
+		regulator-name = "DCDC_3V3";
 		regulator-min-microvolt = <3300000>;
 		regulator-max-microvolt = <3300000>;
-		gpios = <&gpio_spi 3 GPIO_ACTIVE_LOW>;
+		regulator-off-in-suspend;
+		regulator-always-on;
 	};
 
 	sound-wm8960 {
@@ -111,17 +89,6 @@
 		num-chipselects = <1>;
 		#address-cells = <1>;
 		#size-cells = <0>;
-
-		gpio_spi: gpio@0 {
-			compatible = "fairchild,74hc595";
-			gpio-controller;
-			#gpio-cells = <2>;
-			reg = <0>;
-			registers-number = <1>;
-			registers-default = /bits/ 8 <0x57>;
-			spi-max-frequency = <100000>;
-			enable-gpios = <&gpio5 8 GPIO_ACTIVE_LOW>;
-		};
 	};
 };
 
@@ -132,12 +99,6 @@
 
 &csi {
 	status = "disabled";
-
-	port {
-		csi1_ep: endpoint {
-			remote-endpoint = <&ov5640_ep>;
-		};
-	};
 };
 
 &i2c2 {
@@ -156,27 +117,6 @@
 		clocks = <&clks IMX6UL_CLK_SAI2>;
 		clock-names = "mclk";
 	};
-
-	ov5640: ov5640@3c {
-		compatible = "ovti,ov5640";
-		reg = <0x3c>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_csi1 &pinctrl_camera_clock>;
-		clocks = <&clks IMX6UL_CLK_CSI>;
-		clock-names = "csi_mclk";
-		pwn-gpios = <&gpio_spi 6 1>;
-		rst-gpios = <&gpio_spi 5 0>;
-		csi_id = <0>;
-		mclk = <24000000>;
-		mclk_source = <0>;
-		status = "disabled";
-		port {
-			ov5640_ep: endpoint {
-				remote-endpoint = <&csi1_ep>;
-			};
-		};
-	};
-
 };
 
 &fec1 {
@@ -184,7 +124,7 @@
 	pinctrl-0 = <&pinctrl_enet1>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy0>;
-	phy-supply = <&reg_peri_3v3>;
+	phy-supply = <&dcdc_3v3>;
 	phy-reset-gpios = <&gpio5 7 GPIO_ACTIVE_LOW>;
 	phy-reset-duration = <200>;
 	status = "okay";
@@ -195,7 +135,7 @@
 	pinctrl-0 = <&pinctrl_enet2>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy1>;
-	phy-supply = <&reg_peri_3v3>;
+	phy-supply = <&dcdc_3v3>;
 	phy-reset-gpios = <&gpio5 8 GPIO_ACTIVE_LOW>;
 	phy-reset-duration = <200>;
 	status = "okay";
@@ -226,31 +166,15 @@
 &can1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1>;
-	xceiver-supply = <&reg_can_3v3>;
+	xceiver-supply = <&vsys>;
 	status = "okay";
 };
 
 &can2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan2>;
-	xceiver-supply = <&reg_can_3v3>;
+	xceiver-supply = <&vsys>;
 	status = "okay";
-};
-
-&gpio_spi {
-	eth0-phy-hog {
-		gpio-hog;
-		gpios = <1 GPIO_ACTIVE_HIGH>;
-		output-high;
-		line-name = "eth0-phy";
-	};
-
-	eth1-phy-hog {
-		gpio-hog;
-		gpios = <2 GPIO_ACTIVE_HIGH>;
-		output-high;
-		line-name = "eth1-phy";
-	};
 };
 
 &i2c1 {
@@ -416,7 +340,7 @@
 	cd-gpios = <&gpio1 19 GPIO_ACTIVE_LOW>;
 	keep-power-in-suspend;
 	wakeup-source;
-	vmmc-supply = <&reg_sd1_vmmc>;
+	vmmc-supply = <&dcdc_3v3>;
 	status = "okay";
 };
 
@@ -664,7 +588,6 @@
 			MX6UL_PAD_SD1_DATA3__USDHC1_DATA3 	0x17059
 			MX6UL_PAD_UART1_RTS_B__GPIO1_IO19       0x17059 /* SD1 CD */
 			MX6UL_PAD_GPIO1_IO05__USDHC1_VSELECT    0x17059 /* SD1 VSELECT */
-			MX6UL_PAD_GPIO1_IO09__GPIO1_IO09        0x17059 /* SD1 RESET */
 		>;
 	};
 
@@ -676,7 +599,6 @@
 			MX6UL_PAD_SD1_DATA1__USDHC1_DATA1 0x170b9
 			MX6UL_PAD_SD1_DATA2__USDHC1_DATA2 0x170b9
 			MX6UL_PAD_SD1_DATA3__USDHC1_DATA3 0x170b9
-
 		>;
 	};
 
